--- a/design.html
+++ b/design.html
@@ -12,13 +12,25 @@
 <body class="open-sans-normal">
     <header>
         <nav>
-            <h1>Mushfiqur</h1>
+            <h1>Mus<span class="Name-color">hf</span>iqur</h1>
             <ul>
-                <li><a class="link color">Protfolio</a></li>
-                <li><a class="link color">Blog</a></li>
+                <li><a class="link-color">Protfolio</a></li>
+                <li><a class="link-color">Blog</a></li>
                 <li><button class="button-design">Hire me</button></li>
             </ul>
         </nav>
+        <div class="introduction">
+            <div class="container">
+            <h4>Hi, I am</h4>
+            <H1>Musfiqur Rahman</H1>
+            <p>
+                Beginner Web Developer and professional student. I have 18 years experience of studying. I have multiple skills like Microsoft office, Canva and Programming language. 
+            </p>
+            <button class="button-design">Download CV</button>
+            <button class="contact">Contact</button>
+            </div>
+            <img src="hardy.png" alt="pic">
+        </div>
     </header>
     <main>
 
