--- a/design.html
+++ b/design.html
@@ -24,16 +24,43 @@
             <h4>Hi, I am</h4>
             <H1>Musfiqur Rahman</H1>
             <p>
-                Beginner Web Developer and professional student. I have 18 years experience of studying. I have multiple skills like Microsoft office, Canva and Programming language. 
+                Beginner Web Developer and professional student. I have 18 years experience of studying. I have multiple skills in Microsoft office, Canva and Programming language. 
             </p>
             <button class="button-design">Download CV</button>
             <button class="contact">Contact</button>
             </div>
-            <img src="hardy.png" alt="pic">
+            <img src="IMG_7169-removebg-preview.png" alt="pic" width="550px">
         </div>
     </header>
     <main>
+        <div class="about-me">
+            <div class="title-letter">
+                <h1 class="topic">About me</h1>
+                <p class="description">
+                    I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+                </p>
+            </div>
+            <div class="specific">
+                <li>
+                    <h5>Name</h5>
+                    <b>Mushfiqur Rahman</b>
+                </li>
+                <li>
+                    <h5>Email</h5>
+                    <a href="mushfiqur990728@gmail.com"><b>mushfiqur990728@gmail.com</b></a>
+                </li>
+                <li>
+                    <h5>Date of birth</h5>
+                    <b>18 October 2025</b>
+                </li>
+                <li>
+                    <h5>From</h5>
+                    <b>Dhaka, Bangladesh</b>
+                </li>
 
+            </div>
+                
+        </div>
     </main>
     <footer>
 
